--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Fashinterest</title>
 
     <!-- Bootstrap -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="static/css/fashin.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -20,18 +20,18 @@
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
       <script src="static/js/fashin.js"></script>
-      <style>
-          .item {
-            width = 20%;
-            position:relative;
-          }
-      </style>
+      
   </head>
   <body>
-    <h1>Fashinterest</h1>
-    <div id="content">
-        Content
+    <div class="container">
+        <div class="header clearfix">
+            <h3 class="text-muted title">Fashinterest</h3>
+        </div>
+        <div id="content">
+        </div>
+
     </div>
+
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="static/js/bootstrap.min.js"></script>
